# Seamless

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-COMMERCIAL  README.md  docker-compose.yml  seamless-relay.example.json
.github/workflows/: ci.yml  security.yml
crates/seamless-client/: Cargo.toml
crates/seamless-client/src/: config.rs  main.rs
crates/seamless-common/: Cargo.toml
crates/seamless-common/src/: lib.rs
crates/seamless-relay/: Cargo.toml
crates/seamless-relay/src/: acme.rs  admin.html  admin.rs  audit.rs  cloudflare.rs  denylist.rs  geoip.rs  ingress.rs  logs.rs  main.rs  metrics.rs  store.rs  tcp_passthrough.rs  tls.rs  tunnel.rs
crates/seamless-relay/tests/: e2e_http.rs
docs/: ARCHITECTURE.md  PROTOCOL.md
examples/: local-demo.sh
systemd/: README.md  install.sh  seamless-relay.service
