[workspace]
resolver = "2"
members = [
    "crates/seamless-common",
    "crates/seamless-relay",
    "crates/seamless-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[workspace.dependencies]
seam-protocol = { path = "../Seam" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
hex = "0.4"
rand = "0.8"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
axum = { version = "0.8", features = ["json", "macros"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"

[profile.release]
opt-level = 3
lto = "thin"
