[package]
name = "seamless-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "seamless"
path = "src/main.rs"

[dependencies]
seamless-common = { path = "../seamless-common" }
seam-protocol = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
ml-kem = { workspace = true }
toml = "1"
dirs = "5"
serde = { workspace = true }
