[package]
name = "seamless-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "seamless-relay"
path = "src/main.rs"

[dependencies]
seamless-common = { path = "../seamless-common" }
seam-protocol = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
subtle = "2"
pqcrypto-kyber = { workspace = true }
pqcrypto-traits = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tower-http = { workspace = true }
x25519-dalek = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
seamless-common = { path = "../seamless-common" }
seam-protocol = { workspace = true }
tokio = { workspace = true }
