[package]
name = "seamless-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "seamless-relay"
path = "src/main.rs"

[dependencies]
seamless-common = { path = "../seamless-common" }
seam-protocol = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
subtle = "2"
ml-kem = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { workspace = true }
x25519-dalek = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
toml = { workspace = true }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }

[dev-dependencies]
seamless-common = { path = "../seamless-common" }
seam-protocol = { workspace = true }
tokio = { workspace = true }
